--- a/docs/tech/周边开发技术/前后端开发概述.md
+++ b/docs/tech/周边开发技术/前后端开发概述.md
@@ -324,6 +324,26 @@ restful中一般包含以下数据：
 
 接口地址、请求方法、请求参数:即传输参数时要带什么参数、携带什么字段，规则是什么、返回内容：一般为json或者xml形式，错误代码
 
+具体来说
+
+**域名**：应该将api部署在专用域名之下，如https://api.example.com api很简单时考虑放在主域名下 https://example.org/api/
+
+**版本**：应该将api的版本好放入URL中：https://api.example.com/v1/
+
+**路径**: 每个路径/终点代表一种资源，所以api中不能有动词，只能有名词，而且所用名词往往与数据库的表名对应，如https://api.example.com/v1/zoos https://api.example.com/v1/animals
+
+**http动词**：对于资源的不同操作类型使用不同的http方法
+
+**过滤信息**：如果资源数据很多，服务器不可能都将它们返回给用户，api提供参数，过滤返回结果。？limit=10:指定返回记录的数量 ？offset：指定返回记录的开始位置 ？page=2&per——page=100 指定第几页，以及每页的记录数 ？sortby=name&order=asc：指定返回结果按照哪个属性排序以及排序顺序 ？animal——type——id=1:指定筛选条件
+
+**状态码**：服务器向用户返回的状态码和提示信息
+
+**错误处理**:如果状态码时4**，应该向用户返回错误信息，并将error作为键名
+
+**返回结果**：不同的请求应该返回指定解构的数据，比如数组或者包含完整信息的对象
+
+**其他**：api的身份认证应该使用oauth2.0框架、服务器返回的数据格式应该尽量使用json，避免使用xml
+
 ### Swagger
 
 swagger是rest API生成工具，swagger是一个完整的框架，用于生成、描述、调用和可视化restfulapi的web服务
