--- a/docs/tech/算法/算法题2.md
+++ b/docs/tech/算法/算法题2.md
@@ -1,5 +1,5 @@
 ---
-title: 算法题（一）
+title: 算法题（二）
 date: 2020-06-06 21:40:33
 categories: 技术博客
 tags: IT,Web，算法
@@ -126,7 +126,7 @@ class Solution:
         return dp[n]
 ```
 
-##### 变形1：爬楼梯的方法
+#### 变形1：爬楼梯的方法
 
 每次你可以爬 1 或 3个台阶。你有多少种不同的方法可以爬到楼顶呢？
 
@@ -142,7 +142,7 @@ class Solution:
         return dp[n]
 ```
 
-##### 变形2：不能去指定层数或者指定倍数的层数
+#### 变形2：不能去指定层数或者指定倍数的层数
 
 不能经过指定的楼层数，或者指定倍数（比如5的倍数的层数或者7的倍数的层数）
 
@@ -169,7 +169,7 @@ class Solution:
 
 我一开始的思路是总方法数减去删去指定层数的方法数，后面经人提点，经过指定层数也要能够到达终点。所以这种思路的方法应该是减去到达指定层数的方法数*单独后面的层数的方法数，理论上应该也是可行的。但是此种方法对于倍数的问题计算量会很大，也就是每经过一次不能去的楼层都要计算倍数，所以不推荐
 
-##### 变形3:爬两步之后只能爬一步
+#### 变形3:爬两步之后只能爬一步
 
 f(n,status)=f(n-1,1)+f(n-2,2)
 
@@ -776,7 +776,7 @@ if _name_ == '_main_':
 
 输出：false
 
-大神做法（思路巧妙）
+大神做法（思路巧妙,复杂度较复杂）
 
 ```python
 class Solution:
@@ -787,6 +787,30 @@ class Solution:
            s = s.replace('[]','')
         return s == ''
 ```
+
+复杂度较低的
+
+```python
+class Solution:
+    def isValid(self, s: str) -> bool:
+        stack = []
+        
+        for item in s:
+            if item == '(':
+                stack.append(')')
+            elif item == '[':
+                stack.append(']')
+            elif item == '{':
+                stack.append('}')
+            elif not stack or stack[-1] != item:
+                return False
+            else:
+                stack.pop()
+        
+        return True if not stack else False
+```
+
+
 
 ### 括号生成22
 
@@ -826,10 +850,22 @@ class Solution:
 ```python
 class Solution:
     def longestValidParentheses(self, s: str) -> int:
-        
+        length = len(s)
+        if length == 0:
+            return 0
+        dp = [0] * length
+        for i in range(1,length):
+        		#当遇到右括号时，尝试向前匹配左括号
+            if s[i] == ')':
+                pre = i - dp[i-1] -1;
+                #如果是左括号，则更新匹配长度
+                if pre>=0 and s[pre] == '(':
+                    dp[i] = dp[i-1] + 2
+                    #处理独立的括号对的情形 类似()()、()(())
+                    if pre>0:
+                        dp[i] += dp[pre-1]
+        return max(dp);
 ```
-
-
 
 
 
@@ -959,5 +995,34 @@ class Solution:
 class Solution:
    def reverseWords(self,s:str)->str:
        return " ".join(s.split())[::-1]
+```
+
+
+
+### 判断子序列392
+
+给定字符串 s 和 t ，判断 s 是否为 t 的子序列。
+
+字符串的一个子序列是原始字符串删除一些（也可以不删除）字符而不改变剩余字符相对位置形成的新字符串。（例如，"ace"是"abcde"的一个子序列，而"aec"不是）。
+
+输入：s = "abc", t = "ahbgdc"
+输出：true
+
+输入：s = "axc", t = "ahbgdc"
+输出：false
+
+```python
+class Solution:
+    def isSubsequence(self, s: str, t: str) -> bool:
+        i = 0
+        j = 0
+        while i < len(s) and j < len(t):
+            # print(i, j)
+            if s[i] == t[j]:
+                i += 1
+                j += 1
+            else:
+                j += 1    
+        return i == len(s)
 ```
 
