--- a/docs/tech/算法/算法题5.md
+++ b/docs/tech/算法/算法题5.md
@@ -1,8 +1,8 @@
 ---
 title: 算法题（五）
 date: 2020-03-02 21:40:33
-categories: 个人生活
-tags: 生活、幸福 
+categories: 技术博客
+tags: IT,Web，算法
 toc: true
 thumbnail: 
 ---
@@ -14,6 +14,43 @@ thumbnail:
 ### 二叉树
 
 https://zhuanlan.zhihu.com/p/29800274
+
+类型题：
+
+1.前序遍历、中序遍历、后续遍历
+
+2.层次遍历：层次遍历和之字形遍历
+
+3.使用前序遍历、中序遍历和后续遍历中的两种构建二叉树
+
+4.求和问题：判断二叉树中是否存在
+
+5.填充问题：二叉树的右侧指针1、2
+
+6.一般二叉树的特殊情况：相同二叉树、对称二叉树
+
+7.搜索二叉树：是否为二叉树、
+
+8.其他：平衡二叉树、二叉树的最近公共祖先
+
+#### 循环遍历写法
+
+qianxubianli
+
+```python
+def traverse_circulation(root):
+  	stack = []
+    node = root
+    while node or len(stack) != 0:
+      	print(node.data)
+        stack.append(node)
+        node = node.left
+        while (not node ) and len(stack) != 0:
+          	node = stack.pop()
+            node = node.right
+```
+
+
 
 #### 判断是否为对称二叉树 101
 
