--- a/docs/tech/进阶前端技术/前端工程化一.md
+++ b/docs/tech/进阶前端技术/前端工程化一.md
@@ -1,5 +1,5 @@
 ---
-title: 前端进阶（一）
+title: 前端进阶（一）-前端工程化
 date: 2020-12-15 21:40:33
 categories: IT
 tags: IT，Web,数据库
@@ -12,74 +12,6 @@ thumbnail: http://cdn.kunkunzhang.top/webpack.png
 ​       对于进阶，掌握基本原理和一些动画方面的库能够更美观的进行展现，实现更炫酷的动画效果。
 
 <!--more-->
-
-## js底层原理
-
-### js执行过程
-
-JavaScript是一种解释型语言，执行时按照解释器-编译器-执行的顺序进行。
-
-解释器：
-
-JavaScript的解释器包含在即时编译器(JIT，just in time)中，在一句一句编译源代码的同时又会将编译后的一些代码保存下来。
-
-即时编译器中首先有监视器监控着代码的运行状况。如果一段代码运行了几次，那么这段代码就会被标记为warm代码，标记为warm的代码会被编译器送到基线编译器编译，同时把结果缓存起来，如果一个函数被基线编译器编译，那么函数的每一行都会被编译成一个表，这个表的索引是行号和变量类型，如果监视器发现有代码使用相同的变量类型命中这段代码时，JIT会直接提取这段代码编译后的内容。
-
-如果标记为warm的代码还在不断被调用，那么它会被标记为hot，标记为hot的代码，意味着可能会被经常调用，所以可能需要更多时间优化编译结果。监视器会把该段代码送到优化编译器，编译成一个高效的版本并存储下来。
-
-编译：
-
-parse阶段-
-
-词法分析和语法分析：词法分析是把需要执行的代码字符串分割出来，生成一系列token，便于做语法分析
-
-语法分析分析上述输出，输出AST抽象语法树，如果分析发现异常则抛出错误。
-
-Ignition：Ignition是v8的解释器，它会根据抽象语法树生成对应的字节码并执行。
-
-所谓字节码，就是机器码的抽象，机器码虽然运行效率最高，但是占用空间较大，导致十分占内存，所以以时间换空间，引入字节码
-
-Turbofan：Turbofan能够把字节码翻译成机器码，当发现hot代码时，turbofan会把字节码翻译成机器码，然后调用生成的机器码。如果发现假设失效，则退回字节码
-
-Orinoco：Orinoco是v8的垃圾回收模块
-
-执行：
-
-执行阶段有执行上下文和执行栈两个概念
-
-执行上下文就是JavaScript的运行环境，通常有
-
-全局执行上下文，即window对象
-
-函数执行上下文，即函数执行的时候被创建，每次调用函数就会创建一个新的执行上下文
-
-eval执行上下文
-
-对于每个执行上下文创建时，都有三个比较重要的属性：
-
-变量对象：表示执行上下文的数据作用域，
-
-作用域链
-
-确定this指向：
-
-执行栈：
-
-js通过执行栈管理多个执行上下文，执行栈最底端是全局上下文，全局上下文中执行函数的时候，相应上下文会入栈，其中不断调用函数，不同的函数不断创建不同的执行上下文，直到函数执行完毕，上下文出栈，即后进先出
-
-如果有异步函数，在执行栈的空的时候查看任务队列，微任务优先入栈。
-
-### AST的应用
-
-Es-lint就是使用ast查询器查询AST，AST选择器类似CSS选择器，每个ESlint规则都是通过选择器操作的
-
-Babel:Babel对于一段代码的工作流程是：
-
-1.输入代码 2.词法分析，将代码分成token 3.语法分析：把token转换成AST
-
-4.遍历AST 5.改变AST，增删改查。 6.AST转换为源代码
-
-webpack：webpack主要通过遍历AST分析出模块的依赖、消除无用代码等
 
 ## Webpack
 
@@ -729,6 +661,26 @@ module.exports = {
 }
 ```
 
+speed-measure-webpack-plugin
+
+进行构建速度分析，可以看到各个 loader、plugin 的构建时长，后续可针对耗时 loader、plugin 进行优化。
+
+```shell
+npm i -D speed-measure-webpack-plugin
+```
+
+使用
+
+```javascript
+const SpeedMeasurePlugin = require("speed-measure-webpack-plugin");
+const smp = new SpeedMeasurePlugin();
+module.exports = smp.wrap({
+  // ...webpack config...
+})
+```
+
+
+
 
 
 ### 代码相关类
@@ -1145,6 +1097,83 @@ const webpackConfig = {
 }
 module.exports = smp.wrap(webpackConfig);
 ```
+
+
+
+### react相关
+
+react-refresh-webpack-plugin
+
+热更新 react 组件。
+
+```shell
+npm install -D @pmmmwh/react-refresh-webpack-plugin react-refresh
+```
+
+使用
+
+```javascript
+const ReactRefreshWebpackPlugin = require('@pmmmwh/react-refresh-webpack-plugin');
+
+module.exports = {
+    plugins: [
+        new webpack.HotModuleReplacementPlugin(),
+        new ReactRefreshWebpackPlugin(),
+    ]
+}
+```
+
+
+
+## 分离/合并配置
+
+安装webpack-merge
+
+```shell
+npm i webpack-merge -D
+```
+
+在webpackjs中引入别的webpack配置
+
+```javascript
+const {merge} = require('webpack-merge');
+const commonConfig = require('./webpack.common');
+
+const prodConfig = {
+    mode:'production',
+    //可以找出报错代码的源代码路径
+    //cheap 只报告行号（不加会报告列）  module 会报告loader及第三方依赖的错误位置
+    //加了inline就不产生映射文件了
+    //生产环境不需要eval
+    devtool:'cheap-module-source-map',
+    plugins: [
+    ]
+}
+
+module.exports = merge(commonConfig,prodConfig);
+```
+
+
+
+
+
+## 利用source-map还原代码
+
+webpack打包时如果有配置sourcemap，可能在生成js时生成对应的map文件，而利用这个文件甚至可以还原js和组件
+
+reverse-sourcemap
+
+```shell
+npm install --global reverse-sourcemap
+```
+
+找到webpack生成的js对应的map文件，一般为js.map文件，进行还原
+
+```shell
+
+```
+
+
 
 
 
