--- a/docs/tech/周边开发技术/前后端开发概述(三).md
+++ b/docs/tech/周边开发技术/前后端开发概述(三).md
@@ -15,6 +15,422 @@ thumbnail: http://cdn.kunkunzhang.top/graphql.png
 
 https://segmentfault.com/a/1190000038774393?utm_source=sf-related
 
+## 微服务
+
+
+
+
+
+## CI/CD
+
+持续集成（Continuous integration，简称CI）,
+
+持续集成指的是，频繁地（一天多次）将代码集成到主干。 它的好处主要有两个:
+
+1.快速发现错误。每完成一点更新，就集成到主干，可以快速发现错误，定位错误也比较容易。
+
+2.防止分支大幅偏离主干。如果不是经常集成，主干又在不断更新，会导致以后集成的难度变大，甚至难以集成。
+
+持续集成的目的，就是让产品可以快速迭代，同时还能保持高质量。它的核心措施是，代码集成到主干之前，必须通过自动化测试。只要有一个测试用例失败，就不能集成。
+
+持续交付（Continuous delivery)，
+
+持续交付指的是，频繁地将软件的新版本，交付给质量团队或者用户，以供评审。如果评审通过，代码就进入生产阶段。 持续交付可以看作持续集成的下一步。它强调的是，不管怎么更新，软件是随时随地可以交付的。
+
+持续部署（continuous deployment）
+
+持续部署是持续交付的下一步，指的是代码通过评审以后，自动部署到生产环境。
+
+持续部署的目标是，代码在任何时刻都是可部署的，可以进入生产阶段。
+
+根据持续集成的设计，代码从提交到生产，整个过程有以下几步。
+
+（1）提交。流程的第一步，是开发者向代码仓库提交代码。所有后面的步骤都始于本地代码的一次提交
+
+（2）测试（第一轮）。代码仓库对commit操作配置了钩子（hook），只要提交代码或者合并进主干，就会跑自动化测试。 测试有好几种。
+
+- 单元测试：针对函数或模块的测试
+- 集成测试：针对整体产品的某个功能的测试，又称功能测试
+- 端对端测试：从用户界面直达数据库的全链路测试
+
+（3） 构建。通过第一轮测试，代码就可以合并进主干，就算可以交付了。 交付后，就先进行构建（build），再进入第二轮测试。所谓构建，指的是将源码转换为可以运行的实际代码，比如安装依赖，配置各种资源（样式表、JS脚本、图片）等等。 常用的构建工具如下。
+
+（4） 测试（第二轮）。构建完成，就要进行第二轮测试。如果第一轮已经涵盖了所有测试内容，第二轮可以省略，当然，这时构建步骤也要移到第一轮测试前面。
+
+第二轮是全面测试，单元测试和集成测试都会跑，有条件的话，也要做端对端测试。所有测试以自动化为主，少数无法自动化的测试用例，就要人工跑。
+
+需要强调的是，新版本的每一个更新点都必须测试到。如果测试的覆盖率不高，进入后面的部署阶段后，很可能会出现严重的问题。
+
+（5）部署。通过了第二轮测试，当前代码就是一个可以直接部署的版本（artifact）。将这个版本的所有文件打包（ tar filename.tar * ）存档，发到生产服务器。
+
+（6）回滚。一旦当前版本发生问题，就要回滚到上一个版本的构建结果。最简单的做法就是修改一下符号链接，指向上一个版本的目录。
+
+## 软件版本控制
+
+软件开发周期版本控制及称号策略
+
+alpha：内测版，bug多，不稳定，内部版本，不断添加功能
+
+alpha是希腊字母的第一个，表示最早的版本，内部测试版，一般不对外发布，bug多且功能不全，一般只有测试人员使用
+
+Beta1、beta2:公测版，不稳定(比alpha稳定一些)，bug相对还多，且不断添加新功能
+
+beta是希腊字母的第二个，公开测试版，比alpha版本晚一些，主要对部分粉丝用户进行测试使用
+
+RC：候选版，经过多个beta版本逐渐稳定，基本不添加新功能，修复完bug即可进入正式发布版
+
+RC是Release Candidate，候选版本。
+
+GA、RELEASE、Stable、Final：正式版，bug很少，推荐生产使用
+
+GA：General Availability
+
+RELEASE：发行版，sping使用
+
+Stabel：稳定版，Nginx使用
+
+Final：最终版本
+
+其他版本称谓：
+
+Free：自由版
+
+Enhance：增强版
+
+Upgrade：升级版
+
+Plus：增加版
+
+Premium：贵价版
+
+Pro/Professional：专业版
+
+Mini/Lite：精简版，只有最基本的功能
+
+Corporation/Enterprise：企业版
+
+
+
+## 灰度发布/蓝绿部署/滚动发布
+
+在一般情况下，升级服务器端应用，需要将应用源码或程序包上传到服务器，然后停止掉老版本服务，再启动新版本。但是这种简单的发布方式存在两个问题，一方面，在新版本升级过程中，服务是暂时中断的，另一方面，如果新版本有 BUG，升级失败，回滚起来也非常麻烦，容易造成更长时间的服务不可用。
+
+**蓝绿部署**
+
+所谓蓝绿部署，是指同时运行两个版本的应用，蓝绿部署的时候，并不停止掉老版本，而是直接部署一套新版本，等新版本运行起来后，再将流量切换到新版本上。但是蓝绿部署要求在升级过程中，同时运行两套程序，对硬件的要求就是日常所需的二倍，比如日常运行时，需要 10 台服务器支撑业务，那么使用蓝绿部署，你就需要购置二十台服务器。
+
+**滚动发布**
+
+所谓滚动升级，就是在升级过程中，并不一下子启动所有新版本，是先启动一台新版本，再停止一台老版本，然后再启动一台新版本，再停止一台老版本，直到升级完成，这样的话，如果日常需要 10 台服务器，那么升级过程中也就只需要 11 台就行了。
+
+但是滚动升级有一个问题，在开始滚动升级后，流量会直接流向已经启动起来的新版本，但是这个时候，新版本是不一定可用的，比如需要进一步的测试才能确认。那么在滚动升级期间，整个系统就处于非常不稳定的状态，如果发现了问题，也比较难以确定是新版本还是老版本造成的问题。
+
+为了解决这个问题，我们需要为滚动升级实现流量控制能力。
+
+**灰度发布**
+
+灰度发布（又名金丝雀发布，起源是，矿井工人发现，金丝雀对瓦斯气体很敏感，矿工会在下井之前，先放一只金丝雀到井中，如果金丝雀不叫了，就代表瓦斯浓度高）是指在黑与白之间，能够平滑过渡的一种发布方式。在其上可以进行A/B testing，即让一部分用户继续用产品特性A，一部分用户开始用产品特性B，如果用户对B没有什么反对意见，那么逐步扩大范围，把所有用户都迁移到B上面来。灰度发布可以保证整体系统的稳定，在初始灰度的时候就可以发现、调整问题，以保证其影响度。
+
+灰度期：灰度发布开始到结束期间的这一段时间，称为灰度期。
+
+在灰度发布开始后，先启动一个新版本应用，但是并不直接将流量切过来，而是测试人员对新版本进行线上测试，启动的这个新版本应用，就是我们的金丝雀。如果没有问题，那么可以将少量的用户流量导入到新版本上，然后再对新版本做运行状态观察，收集各种运行时数据，如果此时对新旧版本做各种数据对比，就是所谓的 A/B 测试。
+
+当确认新版本运行良好后，再逐步将更多的流量导入到新版本上，在此期间，还可以不断地调整新旧两个版本的运行的服务器副本数量，以使得新版本能够承受越来越大的流量压力。直到将 100% 的流量都切换到新版本上，最后关闭剩下的老版本服务，完成灰度发布。
+
+如果在灰度发布过程中（灰度期）发现了新版本有问题，就应该立即将流量切回老版本上，这样，就会将负面影响控制在最小范围内
+
+总结
+
+在新版本应用发布时，为了服务器不停机升级，使用灰度发布策略，在灰度发布开始时，使用 HTTP Header 匹配指定测试人员的流量到新版本上，然后当新版本内部测试通过后，可以再按百分比，将用户流量一点一点导入到新版本中，比如先导入 10% 观察一下运行情况，然后再导入 20%，如此累加，直到将流量全部导入到新版本上，最后完成升级，如果期间发现问题，就立即取消升级，将流量切回到老版本。
+
+运用灰度发布，就再也不需要加班到深夜进行停机升级了，在白天就可以放心大胆地、安全地发布新版本
+
+
+
+## 单元测试
+
+测试是保证代码质量的重要环节，web项目的单元测试虽然不能完全完成功能测试，但是却能保证底层单一模块的工作质量，并且在代码重构的时候保证对外接口不会发生变化。
+
+经常会提到的敏捷开发，单元测试就是其中必不可少的一步。因此单元测试的需要，尤其是自动化单元测试不可忽略，而且应当作为整个团队的关键责任-而不仅仅是软件开发人员的责任。
+
+- 单元：相对独立功能模块，类、模块、方法。
+- 又称为模块测试，是针对程序模块(软件设计的最小单位)来进行正确性检验的测试工作。
+- 用来检验程式的内部逻辑，也称为个体测试、结构测试或逻辑驱动测试。
+
+单元测试的重要性
+
+由于存在浏览器解析环境、用户操作习惯等差异，前端程序的许多问题是无法捕捉或重现的，现在前端程序的测试多是黑盒测试，即靠点击点击点击来寻找程序bug。这种方式既费时费力，又无法保证测试的覆盖面。同时，前端逻辑和交互越来越复杂，和其他编程语言一样，一个函数，一个模块，在修改bug或添加新功能的过程中，很容易就产生新的bug，或使老的bug复活。这种情况下，反复进行黑盒测试，其工作量和测试质量是可想而知的。
+
+- 反正都要手动测试，所以不如代码自动化。
+- 为了实现依赖接口编程，大型软件项目多人合作时必须要有的
+- 首先，得让你的代码能够测试
+- 增强代码自信
+
+黑盒测试
+
+- bug无法捕捉、重现
+- 费力，工作量大
+- 覆盖面低
+- 反复出现bug
+
+单元测试
+
+- 并不是所有的 js 都需要单元测试。中大型项目
+- 并不是所有的 js 都能够单元测试。良好的模块化和解耦
+
+### TDD与BDD、相关概念
+
+TDD：测试驱动开发（Test-Driven Development）测试驱动开发是敏捷开发中的一项核心实践和技术，也是一种设计方法论。TDD的原理是在开发功能代码之前，先编写单元测试用例代码，测试代码确定需要编写什么产品代码。TDD的基本思路就是通过测试来推动整个开发的进行，但测试驱动开发并不只是单纯的测试工作，而是把需求分析，设计，质量控制量化的过程。TDD首先考虑使用需求（对象、功能、过程、接口等），主要是编写测试用例框架对功能的过程和接口进行设计，而测试框架可以持续进行验证。
+
+ BDD：行为驱动开发（Behavior Driven Development）行为驱动开发是一种敏捷软件开发的技术，它鼓励软件项目中的开发者、QA和非技术人员或商业参与者之间的协作。主要是从用户的需求出发，强调系统行为。BDD最初是由Dan North在2003年命名，它包括验收测试和客户测试驱动等的极限编程的实践，作为对测试驱动开发的回应。
+
+测试套件”（test suite）：describe (moduleName, testDetails)。可以嵌套使用，明白、易懂即可。describe块称为”测试套件”（test suite），表示一组相关的测试。它是一个函数，第一个参数是测试套件的名称（”加法函数的测试”），第二个参数是一个实际执行的函数。
+
+测试用例”（test case）：it (info, function)。具体的测试语句，可多个。it块称为”测试用例”（test case），表示一个单独的测试，是测试的最小单位。它也是一个函数，第一个参数是测试用例的名称（”1 加 1 应该等于 2”），第二个参数是一个实际执行的函数。
+
+- info，写期望的正确输出的简要一句话文字说明。info：当该it 的block内的test failed的时候控制台就会把详细信息打印出来。
+- 测试用例之中，只要有一个断言为false，这个测试用例就会失败，只有所有断言都为true，测试用例才会通过。
+- function，具体测试函数，一个测试用例内部，包含一个或多个断言（assert）。
+
+
+
+断言指的是对代码行为的预期，会返回一个布尔值，表示代码行为是否符合预期。
+
+- 所有的测试用例（it块）都应该含有一句或多句的断言。
+- 断言是编写测试用例的关键
+- 断言功能由断言库来实现，Mocha本身不带断言库，所以必须先引入断言库。
+- 断言库有很多种，Mocha并不限制使用哪一种。
+
+单元测试生命周期
+
+每个测试块（describe）有4个周期函数：before、beforeEach、afterEach、after
+
+| 周期函数     | 存在周期                       | 主要功能                             |
+| ------------ | ------------------------------ | ------------------------------------ |
+| before()     | 在本区块的所有测试用例之前执行 | 用于同一的桩数据导入等功能           |
+| beforeEach() | 在本区块的每个测试用例之前执行 | 用于清理测试环境，删除或回滚相关数据 |
+| afterEach()  | 在本区块的每个测试用例之后执行 | 可以用于准备测试用例所需的前置条件   |
+| after()      | 在本区块的所有测试用例之后执行 | 可以用于准备测试用例所需的后置条件   |
+
+测试用例结构：
+
+a. **Setup**: 准备好环境和数据，跑这个测试用例之前的准备
+
+b. **Execution**：执行测试（测试用例的实现的主要代码）
+
+c. **Validation**：验证结果
+
+d. **Cleanup**：现场恢复，一般与a相反。不影响跑后面的测试用例。
+
+TDD相关接口：
+
+ **suite**：定义一组测试用例。
+
+ **suiteSetup**：此方法会在这个suite所有测试用例执行前执行一次，只一次，这是跟setup的区别。
+
+ **setup**：此方法会在每个测试用例执行前都执行一遍。
+
+ **test**：具体执行的测试用例实现代码。
+
+ **teardown**：此方法会在每个测试用例执行后都执行一遍，与setup相反。
+
+ **suiteTeardown**：此方法会在这个suite所有测试用例执行后执行一次，与suiteSetup相反。
+
+
+
+### 前端单元测试框架
+
+前端测试框架有
+
+- Mocha
+- Jasmine
+- Jest
+- Tape
+- Karma
+
+Mocha
+
+```shell
+npm install mocha --save-dev
+```
+
+
+
+```javascript
+const add = require("./add");
+const assert = require("assert");
+
+// describe：定义一组测试
+describe("加法函数测试", function() {
+    before(function() {
+        // runs before all tests in this block
+    });
+    
+    // it: 定义一个测试用例
+    it("1 加 1 应该等于 2", function() {
+        // assert: nodejs内置断言模块
+        assert.equal(add(1, 1), 2);
+    });
+    
+    after(function() {
+        // runs after all test in this block
+    });
+});
+```
+
+断言库
+
+Mocha 支持`should.js`, `chai`, `expect.js`, `better-assert`, `unexpected`等断言库
+
+```javascript
+//assert
+assert.ok(add(1, 1));
+assert.equal(add(1, 1), 2);
+//shouldjs
+(add(1, 1)).should.be.a.Number();
+(add(1, 1)).should.equal(2);
+//expectjs
+expect(add(1, 1)).to.be.a("number");
+expect(add(1, 1)).to.equal(2);
+//chai支持should, expect, assert三种语法
+```
+
+`should.js`和`expect.js`相较于`assert`语义性更强，且支持类型检测，而`should.js`在语法上更加简明，同时支持链式语法`.and`。
+
+- chai.js断言库：接口丰富，文档齐全，可以对各种接口进行断言。
+- expect 库应用是非常广泛，拥有很好的链式结构和仿自然语言的方法。
+- 通常写同一个断言会有几个方法，比如：expect(response).to.be(true) 和 expect(response).equal(true)。
+
+expect和should是BDD风格的，二者使用相同的链式语言来组织断言，但不同在于他们初始化断言的方式：expect使用构造函数来创建断言对象实例，而should通过为Object.prototype新增方法来实现断言（所以should不支持IE）；expect直接指向chai.expect，而should则是chai.should()。
+
+expect断言风格
+
+- ok ：检查是否为真
+- true：检查对象是否为真
+- to.be、to：作为连接两个方法的链式方法
+- not：链接一个否定的断言，如 expect(false).not.to.be(true)
+- a/an：检查类型（也适用于数组类型）
+- include/contain：检查数组或字符串是否包含某个元素
+- below/above：检查是否大于或者小于某个限定值
+
+assert风格是三种断言风格中唯一不支持链式调用的，Chai提供的assert风格的断言和node.js包含的assert模块非常相似。
+
+Mocha 支持4种 hook，包括`before / after / beforeEach / afterEach`。
+
+Mocha 默认每个测试用例执行2000ms，超出时长则报错，所以在测试代码中如果有异步操作，则需要通过`done`函数来明确测试用例结束。`done`接受`Error`参数。
+
+Mocha 在node环境下运行时，不支持 BOM 和 DOM 接口，需要引入`jsdom`和`jsdom-global`库。
+
+Mocha命令行基本用法：
+
+- mocha：默认运行test子目录里面的测试脚本，不包括子文件
+- mocha add.test.js：当前目录下面的该测试脚本。
+- mocha file1 file2 file3 ： mocha命令后面紧跟测试脚本的路径和文件名，可以指定多个测试用例。
+
+通配符：
+
+- mocha spec/{my,awesome}.js
+- mocha test/unit/*.js
+
+生成格式
+
+- mocha –reporter spec：默认为spec格式，可设置其他格式。
+- mocha –recursive -R markdown > spec.md 。
+
+网页查看
+
+npm install –save-dev mochawesome
+
+在gulp中运行mocha
+
+安装gulp-mocha插件
+
+```shell
+npm install gulp-mocha --save-dev
+```
+
+gulpfile
+
+```gulpfile
+gulp.task('mocha',function() {
+	return 
+})
+```
+
+
+
+Jasmine
+
+Jasmine 是一个功能全面的测试框架，内置断言`expect`；但是有全局声明，且需要配置，相对来说使用更复杂、不够灵活。
+
+```shell
+npm install jasmine --save-dev
+```
+
+Jasmine 的语法与 Mocha 非常相似，不过断言采用内置的`expect()`。
+
+
+
+Jest
+
+Jest 是一个功能全面的“零配置”测试框架，既集成了各种工具，且无需配置即可使用。
+
+```shell
+npm install --save-dev jest
+```
+
+Jest 中以`test`定义一个测试用例，且自带断言`expect`，断言库功能强大，但语法相较于`should.js`来说更复杂。
+
+普通匹配：`toBe`, `not.toBe`
+
+空匹配：`toBeNull`, `toBeUndefined`, `toBeDefine`, `toBeTruthy`, `toBeFalsy`
+
+数字大小：`toBeGreaterThan`, `toBeGreaterThanOrEqual`, `toBeLessThan`, `toEqual`, `toBeCloseTo`(用于浮点数)
+
+正则匹配：`toMatch`
+
+数组查询：`toContain`
+
+构造匹配：`toEqual(expect.any(constructor))`
+
+Jest 同样有四个hook，`beforeAll/beforeEach/afterAll/afterEach`
+
+Jest 内置对 DOM 和 BOM 接口的支持。
+
+Jest 内置覆盖统计，为了更方便地进行相关配置，我们可以创建一个配置文件`jest.config.js`
+
+然后将`package.json`中的命名修改一下：`"test-jest": "jest"`
+
+### 其他语言测试框架
+
+
+
+### 单元测试与集成测试、功能测试
+
+#### 三种测试的主要作用
+
+- 单元测试，单个组件正常工作，开发阶段；用来确保每个组件正常工作 —— 测试组件的 API 。
+- 集成测试，不同组件互相合作，中间阶段；用来确保不同组件互相合作 —— 测试组件的 API, UI, 或者边缘情况（比如数据库I/O，登录等等）。
+- 功能测试，主要测试界面，开发完成。 用来确保整个应用会按照用户期望的那样运行 —— 主要测试界面
+
+#### 三种测试在不同阶段的重要性
+
+- 开发阶段，主要是程序员反馈。这时单元测试很有用。
+- 在中间阶段，主要是能够在发现问题时立刻停下来。这时各种测试都很有用。
+- 在生产环境，主要是运行功能测试套件，确保部署的时候没有弄坏什么东西。
+
+
+
+## DDD驱动测试
+
+
+
+## e2e测试
+
+
+
+
+
 ## 前端代码打包
 
 
@@ -48,3 +464,28 @@ https://segmentfault.com/a/1190000038774393?utm_source=sf-related
 1是基于服务的构建方式。通常服务于实际生产。可以再细分成本地服务构建与远端服务构建。本地服务构建就是我们常规的操作，基本被webpack统治，是bundle方案的代表，snowpack、Vite、Web Dev Server是目前比较火的Bundleless方案，发展迅猛。远端服务构建则是依托云能力的玩法，把构建过程放在服务端完成。
 
 2是基于浏览器的构建方式。通常面向Demo的快速搭建或预览方案。Codesandbox、StackBlitz、CodePen和Riddel是业内比较出色的方案。整体是在浏览器端实现代码的编译、打包、构建和运行。
+
+
+
+## 重构
+
+原则
+
+1. 事不过三，三则重构。即不能重复写同样的代码，在这种情况下要去重构。
+2. 如果一段代码让人很难看懂，那就该考虑重构了。
+3. 如果已经理解了代码，但是非常繁琐或者不够好，也可以重构。
+4. 过长的函数，需要重构。
+5. 一个函数最好对应一个功能，如果一个函数被塞入多个功能，那就要对它进行重构了。（4 和 5 不冲突）
+6. 重构的关键在于运用大量微小且保持软件行为的步骤，一步步达成大规模的修改。每个单独的重构要么很小，要么由若干小步骤组合而成。
+
+手段：
+
+1. 提取重复代码，封装成函数
+2. 拆分功能太多的函数
+3. 变量/函数改名
+4. 替换算法
+5. 以函数调用取代内联代码
+6. 移动语句
+7. 折分嵌套条件表达式
+8. 将查询函数和修改函数分离
+
