--- a/docs/tech/算法/算法题1.md
+++ b/docs/tech/算法/算法题1.md
@@ -1,5 +1,5 @@
 ---
-title: 算法题（三）
+title: 算法题（一）
 date: 2020-06-06 21:40:33
 categories: 技术博客
 tags: IT,Web，算法
@@ -49,6 +49,39 @@ thumbnail:
 
 
 
+### 常见复杂度
+
+遍历二叉树节点的复杂度：O(N)
+
+
+
+## 编程语言
+
+### js
+
+遍历对象使用charAt方法
+
+```javascript
+var s = new String('abc');
+
+s.charAt(1) // "b"
+s.charAt(s.length - 1) // "c"
+```
+
+js遍历数组时，一般不使用forEach语法，一般会希望符合某种条件时，就中断遍历，要使用`for`循环。
+
+```javascript
+for (var i = 0; i < arr.length; i++) {
+  if (arr[i] === 2) break;
+  console.log(arr[i]);
+}
+//1
+```
+
+
+
+
+
 ## 动态规划
 
 ### 动态规划经典问题：0-1背包问题
@@ -69,7 +102,36 @@ thumbnail:
 
 
 
-### 动态规划经典问题：高楼扔鸡蛋问题
+### 动态规划经典问题：高楼扔鸡蛋问题887. 鸡蛋掉落
+
+给你 k 枚相同的鸡蛋，并可以使用一栋从第 1 层到第 n 层共有 n 层楼的建筑。
+
+已知存在楼层 f ，满足 0 <= f <= n ，任何从 高于 f 的楼层落下的鸡蛋都会碎，从 f 楼层或比它低的楼层落下的鸡蛋都不会破。
+
+每次操作，你可以取一枚没有碎的鸡蛋并把它从任一楼层 x 扔下（满足 1 <= x <= n）。如果鸡蛋碎了，你就不能再次使用它。如果某枚鸡蛋扔下后没有摔碎，则可以在之后的操作中 重复使用 这枚鸡蛋。
+
+请你计算并返回要确定 f 确切的值 的 最小操作次数 是多少？
+
+例：输入：k = 1, n = 2
+输出：2
+解释：
+鸡蛋从 1 楼掉落。如果它碎了，肯定能得出 f = 0 。 
+否则，鸡蛋从 2 楼掉落。如果它碎了，肯定能得出 f = 1 。 
+如果它没碎，那么肯定能得出 f = 2 。 
+因此，在最坏的情况下我们需要移动 2 次以确定 f 是多少。 
+
+```python
+class Solution:
+    def superEggDrop(self, k: int, n: int) -> int:
+        dp = [0] * (k + 1)
+        m = 0
+        while dp[k] < n:
+            m += 1
+            for i in range(k, 0, -1):
+                # print(m, k)
+                dp[i] = dp[i - 1] + dp[i] + 1
+        return m
+```
 
 
 
@@ -204,7 +266,65 @@ class Solution:
         return dp[-1]
 ```
 
+### 打家劫舍2 213
 
+你是一个专业的小偷，计划偷窃沿街的房屋，每间房内都藏有一定的现金。这个地方所有的房屋都 围成一圈 ，这意味着第一个房屋和最后一个房屋是紧挨着的。同时，相邻的房屋装有相互连通的防盗系统，如果两间相邻的房屋在同一晚上被小偷闯入，系统会自动报警 。
+
+给定一个代表每个房屋存放金额的非负整数数组，计算你 在不触动警报装置的情况下 ，今晚能够偷窃到的最高金额。
+
+输入：nums = [2,3,2]
+输出：3
+解释：你不能先偷窃 1 号房屋（金额 = 2），然后偷窃 3 号房屋（金额 = 2）, 因为他们是相邻的。
+
+```python
+class Solution:
+    def rob(self, nums: List[int]) -> int:
+      if (n := len(nums)) == 0:
+        return 0
+      if n == 1:
+        return nums[0]
+      result1 = self.robRange(nums, 0, n - 2)
+      result2 = self.robRange(nums, 1, n - 1)
+      return max(result1 , result2)
+
+    def robRange(self, nums: List[int], start: int, end: int) -> int:
+      if end == start: return nums[start]
+      dp = [0] * len(nums)
+      dp[start] = nums[start]
+      dp[start + 1] = max(nums[start], nums[start + 1])
+      for i in range(start + 2, end + 1):
+        dp[i] = max(dp[i -2] + nums[i], dp[i - 1])
+      return dp[end]
+```
+
+### 打家劫舍3 337
+
+在上次打劫完一条街道之后和一圈房屋后，小偷又发现了一个新的可行窃的地区。这个地区只有一个入口，我们称之为“根”。 除了“根”之外，每栋房子有且只有一个“父“房子与之相连。一番侦察之后，聪明的小偷意识到“这个地方的所有房屋的排列类似于一棵二叉树”。 如果两个直接相连的房子在同一天晚上被打劫，房屋将自动报警。
+
+计算在不触动警报的情况下，小偷一晚能够盗取的最高金额。
+
+例：输入: [3,2,3,null,3,null,1]
+
+输出: 7 
+解释: 小偷一晚能够盗取的最高金额 = 3 + 3 + 1 = 7.
+
+```python
+class Solution:
+    def rob(self, root: TreeNode) -> int:
+        if root is None:
+            return 0
+        if root.left is None and root.right  is None:
+            return root.val
+        # 偷父节点
+        val1 = root.val
+        if root.left:
+            val1 += self.rob(root.left.left) + self.rob(root.left.right)
+        if root.right:
+            val1 += self.rob(root.right.left) + self.rob(root.right.right)
+        # 不偷父节点
+        val2 = self.rob(root.left) + self.rob(root.right)
+        return max(val1, val2)
+```
 
 
 
@@ -558,7 +678,30 @@ class Solution:
 
 ### 分割回文串131
 
+给你一个字符串 `s`，请你将 `s` 分割成一些子串，使每个子串都是 **回文串** 。返回 `s` 所有可能的分割方案。
 
+**回文串** 是正着读和反着读都一样的字符串。
+
+输入：s = "aab"
+输出：[["a","a","b"],["aa","b"]]
+
+```python
+class Solution:
+    def partition(self, s: str) -> List[List[str]]:
+        if len(s) == 0:
+            return [[]]
+        if len(s) == 1:
+            return [[s]]
+        tmp = []
+        for i in range(1,len(s)+1):
+            left = s[:i]
+            right = s[i:]
+            if left ==left[::-1]: #如果左侧不是回文的，则舍弃这种尝试
+                right = self.partition(right)
+                for i in range(len(right)):
+                    tmp.append([left]+right[i])
+        return tmp
+```
 
 
 
@@ -600,6 +743,65 @@ class Solution:
 折半查找法也称为二分查找法，它充分利用了元素间的次序关系，采用分治策略，可在最坏的情况下用O(log n)完成搜索任务。它的基本思想是：（这里假设数组元素呈升序排列）将n个元素分成个数大致相同的两半，取a[n/2]与欲查找的x作比较，如果x=a[n/2]则找到x，算法终止；如 果x<a[n/2]，则我们只要在[数组](https://baike.baidu.com/item/数组)a的左半部继续搜索x；如果x>a[n/2]，则我们只要在数组a的右 半部继续搜索x
 
 实例：
+
+### 二分查找返回索引704
+
+给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
+
+例：输入：nums = [-1,0,3,5,9,12], target = 9
+
+输出：4
+
+输入：nums = [-1,0,3,5,9,12], target = 2
+
+输出：-1
+
+```python
+class Solution:
+    def search(self, nums: List[int], target: int) -> int:
+      	left, right = 0, len(nums) - 1
+        
+        while left <= right:
+            middle = (left + right) // 2
+
+            if nums[middle] < target:
+                left = middle + 1
+            elif nums[middle] > target:
+                right = middle - 1
+            else:
+                return middle
+        return -1
+```
+
+### 二分查找返回布尔值
+
+与上题704类似，返回布尔值
+
+```python
+def search(self, nums: List[int], target: int) -> int:
+  	lo,hi = 0, len(nums) - 1
+    while lo <= hi:
+      	mid = (lo + hi) >> 1
+        if nums[mid] == target:
+          	return True
+        while lo < mid and nums[lo] == nums[mid]:
+          	lo += 1
+        if nums[lo] <= nums[mid]:
+          	if nums[lo] <= target < nums[mid]:
+              	hi = mid - 1
+            else:
+              	lo = mid + 1
+        else:
+    				if nums[mid] < target <= nums[hi]:
+              	lo = mid + 1
+            else:
+              	hi = mid - 1
+    return False
+```
+
+
+
+
 
 ### 二维矩阵查找问题74
 
@@ -732,6 +934,67 @@ class LRUCache:
             self.cache.pop(x)
 ```
 
+### LFU淘汰机制
+
+实现 LFUCache 类：
+
+LFUCache(int capacity) - 用数据结构的容量 capacity 初始化对象
+int get(int key) - 如果键存在于缓存中，则获取键的值，否则返回 -1。
+void put(int key, int value) - 如果键已存在，则变更其值；如果键不存在，请插入键值对。当缓存达到其容量时，则应该在插入新项之前，使最不经常使用的项无效。在此问题中，当存在平局（即两个或更多个键具有相同使用频率）时，应该去除 最近最久未使用 的键。
+
+输入：
+["LFUCache", "put", "put", "get", "put", "get", "get", "put", "get", "get", "get"]
+[[2], [1, 1], [2, 2], [1], [3, 3], [2], [3], [4, 4], [1], [3], [4]]
+输出：
+[null, null, null, 1, null, -1, 3, null, -1, 3, 4]
+
+```python
+class LFUCache:
+
+    def __init__(self, capacity: int):
+        self.c, self.__count = capacity, 0
+        self.keys = {}  # {key: int, value = [value, fre, time]}
+
+    def get(self, key: int) -> int:
+        self.__count += 1
+
+        if key in self.keys:
+            self.keys[key][1] += 1
+            self.keys[key][2] = self.__count
+            return self.keys[key][0]
+        else:
+            return -1
+
+    def put(self, key: int, value: int) -> None:
+        self.__count += 1
+
+        if self.c == 0:
+            return
+        #  如果key不存在
+        if key not in self.keys:
+            if len(self.keys) >= self.c:
+                #  寻找使用次数最少的key
+                min_keys = []
+                min_fre = self.keys[min(self.keys, key=lambda x:self.keys[x][1])][1]
+                for k in self.keys:
+                    if self.keys[k][1] == min_fre:
+                        min_keys.append(k)
+                #  在使用次数最少的key中寻找最近没有使用的
+                min_time, least_key = 1e8, 0
+                for k in min_keys:
+                    if self.keys[k][2] < min_time:
+                        min_time = self.keys[k][2]
+                        least_key = k
+                #  删除the least frequently used key
+                del self.keys[least_key]
+            self.keys[key] = [value, 1, self.__count]
+        #  如果key存在
+        else:
+            self.keys[key][0] = value
+            self.keys[key][1] += 1
+            self.keys[key][2] = self.__count
+```
+
 
 
 ## DFS与BFS
@@ -769,3 +1032,5 @@ class LRUCache:
 https://ppsteven.github.io/
 
  Https://leetcode.wang
+
+各种算法整理： https://darktiantian.github.io/LeetCode%E7%AE%97%E6%B3%95%E9%A2%98%E6%95%B4%E7%90%86%EF%BC%88%E6%95%B0%E7%BB%84%E7%AF%87%EF%BC%89Array/
