--- a/docs/tech/算法/算法题3.md
+++ b/docs/tech/算法/算法题3.md
@@ -1,5 +1,5 @@
 ---
-title: 算法题3
+title: 算法题（三）
 date: 2020-03-02 21:40:33
 categories: IT
 tags: IT 
@@ -33,7 +33,7 @@ class Solution:
         return nums
 ```
 
-##### 移动零 283
+#### 移动零 283
 
 给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
 
@@ -61,26 +61,64 @@ class Solution:
 
 
 
-#### 三数之和
+#### 三数之和(15)
+
+给你一个包含n个整数的数组nums，判断nums中是否存在三个元素，使得这三个整数相加为0
+
+例：输入:nums = [-1,0,1,2,-1,-4]
+
+输出：[-1,-1,2],[-1,0,1]
+
+```python
+class Solution:
+  	def threeSum(self, nums: List[int]) -> List[List[int]]:
+      	nums.sort()
+        ans = []
+        seen = set()
+        n = len(nums)
+        for i in range(n):
+          	a = nums[i]
+            if a in seen: 
+              	continue
+            seen.add()
+            d = {}
+            for j in range(i+1,n):
+              	b = nums[j]
+                if b in d and (not(ans) or (ans[-1][0]!= a or ans[-1][2] != b)):
+                  	ans.append((a,-a-b,b))
+                else:
+                  	d[-a-b] = 0
+        return ans
+```
 
 
 
-
-
-#### 最接近的三数之和
+#### 最接近的三数之和16
 
 给定一个包括  n 个整数的数组  nums 和 一个目标值  target。找出  nums 中的三个整数，使得它们的和与  target 最接近。返回这三个数的和。假定每组输入只存在唯一答案。
 
 ```python
 class Solution:
     def threeSumClosest(self, nums: List[int], target: int) -> int:
-        nums, r, end = sorted(nums), float('inf'), len(nums) - 1
-        for c in range(len(nums) - 2):
-            i, j = max(c + 1, bisect.bisect_left(nums, target - nums[end] - nums[c], c + 1, end) - 1), end
-            while r != target and i < j:
-                s = nums[c] + nums[i] + nums[j]
-                r, i, j = min(r, s, key=lambda x: abs(x - target)), i + (s < target), j - (s > target)
-        return r
+        nums.sort()
+        n = len(nums)
+        nearest = 10 ** 7
+
+        for i in range(n - 2):
+            lo, hi = i + 1, n - 1
+            # 双指针
+            while lo < hi:
+                total = nums[i] + nums[lo] + nums[hi]
+                if total == target:
+                    return total
+                elif total < target:
+                    lo += 1
+                else:
+                    hi -= 1
+                # 直接根据"最近"的定义取结果
+                nearest = min(nearest, total, key=lambda x: abs(x - target))
+        
+        return nearest
 ```
 
 两个数组的交集
@@ -105,15 +143,80 @@ class Solution(object):
         return l
 ```
 
-##### 四数之和
+#### 四数之和18
+
+给你一个由 n 个整数组成的数组 nums ，和一个目标值 target 。请你找出并返回满足下述全部条件且不重复的四元组 [nums[a], nums[b], nums[c], nums[d]] ：
+
+0 <= a, b, c, d < n
+a、b、c 和 d 互不相同
+nums[a] + nums[b] + nums[c] + nums[d] == target
+你可以按 任意顺序 返回答案 。
+
+例：输入：nums = [1,0,-1,0,-2,2], target = 0
+输出：[[-2,-1,1,2],[-2,0,0,2],[-1,0,0,1]]
+
+```python
+class Solution:
+    def fourSum(self, nums: List[int], target: int) -> List[List[int]]:
+      	nums.sort()
+        n = len(nums)
+        res = []
+        for i in range(n):
+            if i > 0 and nums[i] == nums[i - 1]: continue
+            for k in range(i+1, n):
+                if k > i + 1 and nums[k] == nums[k-1]: continue
+                p = k + 1
+                q = n - 1
+
+                while p < q:
+                    if nums[i] + nums[k] + nums[p] + nums[q] > target: q -= 1
+                    elif nums[i] + nums[k] + nums[p] + nums[q] < target: p += 1
+                    else:
+                        res.append([nums[i], nums[k], nums[p], nums[q]])
+                        while p < q and nums[p] == nums[p + 1]: p += 1
+                        while p < q and nums[q] == nums[q - 1]: q -= 1
+                        p += 1
+                        q -= 1
+        return res
+```
 
 
 
-##### 无序整数数组，找出第k大的值
+#### 无序整数数组，找出第k大的值215
+
+给定整数数组 `nums` 和整数 `k`，请返回数组中第 `**k**` 个最大的元素。
+
+请注意，你需要找的是数组排序后的第 `k` 个最大的元素，而不是第 `k` 个不同的元素。、
+
+例：输入: [3,2,1,5,6,4] 和 k = 2
+输出: 5
+
+```python
+class Solution:
+    def findKthLargest(self, nums: List[int], k: int) -> int:
+      	if len(nums) == 1: return nums[0]
+        mid = int(len(nums) // 2)
+        left, right, mids = [], [], []
+        for i in range(len(nums)):
+            if nums[i] > nums[mid]:
+                left.append(nums[i])
+            elif nums[i] < nums[mid]:
+                right.append(nums[i])
+            else:
+                mids.append(nums[i])
+        if len(left) >= k:
+            return  self.findKthLargest(left, k)
+        elif len(mids) >= k - len(left):
+            return nums[mid]
+        else:
+            return self.findKthLargest(right, k - len(left) - len(mids))
+```
 
 
 
-##### 买卖股票的最佳时机(121,)
+
+
+#### 买卖股票的最佳时机1、2、3、4(121,122,123,188,309)
 
 给定数组prices，第i个元素表示股票第i天的价格
 
@@ -133,7 +236,128 @@ class Solution:
         return max_v
 ```
 
-##### 连续子数组最大和(53)
+122给定一个数组 prices ，其中 prices[i] 是一支给定股票第 i 天的价格。
+
+设计一个算法来计算你所能获取的最大利润。你可以尽可能地完成更多的交易（多次买卖一支股票）。
+
+注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+输入: prices = [7,1,5,3,6,4]
+输出: 7
+解释: 在第 2 天（股票价格 = 1）的时候买入，在第 3 天（股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5-1 = 4 。
+     随后，在第 4 天（股票价格 = 3）的时候买入，在第 5 天（股票价格 = 6）的时候卖出, 这笔交易所能获得利润 = 6-3 = 3 。
+
+贪心
+
+```python
+class Solution:
+    def maxProfit(self, prices: List[int]) -> int:
+        ans = 0
+        for i in range(1, len(prices)):
+            if prices[i] > prices[i-1]:
+                ans += prices[i] - prices[i-1]
+        return ans
+```
+
+dp
+
+```python
+class Solution:
+    def maxProfit(self, prices: List[int]) -> int:
+        if not prices:
+            return 0
+        n = len(prices)
+        dp = [[0]*2 for _ in range(n)]
+        # dp[i][0]表示第i天不持有股票, dp[i][1]表示第i天持有股票
+        dp[0][0], dp[0][1] = 0, - prices[0]
+        for i in range(1, n):
+            dp[i][0] = max(dp[i-1][0], dp[i-1][1] + prices[i])
+            dp[i][1] = max(dp[i-1][1], dp[i-1][0] - prices[i])
+        return dp[n-1][0]
+```
+
+123:给定一个数组，它的第 i 个元素是一支给定的股票在第 i 天的价格。
+
+设计一个算法来计算你所能获取的最大利润。你最多可以完成 两笔 交易。
+
+注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+输入：prices = [3,3,5,0,0,3,1,4]
+输出：6
+解释：在第 4 天（股票价格 = 0）的时候买入，在第 6 天（股票价格 = 3）的时候卖出，这笔交易所能获得利润 = 3-0 = 3 。
+     随后，在第 7 天（股票价格 = 1）的时候买入，在第 8 天 （股票价格 = 4）的时候卖出，这笔交易所能获得利润 = 4-1 = 3 。
+
+```python
+class Solution:
+    def maxProfit(self, prices: List[int]) -> int:
+        if len(prices) == 0:
+            return 0
+        dp = [0] * 5 
+        dp[1] = -prices[0]
+        dp[3] = -prices[0]
+        for i in range(1, len(prices)):
+            dp[1] = max(dp[1], dp[0] - prices[i])
+            dp[2] = max(dp[2], dp[1] + prices[i])
+            dp[3] = max(dp[3], dp[2] - prices[i])
+            dp[4] = max(dp[4], dp[3] + prices[i])
+        return dp[4]
+```
+
+给定一个整数数组 prices ，它的第 i 个元素 prices[i] 是一支给定的股票在第 i 天的价格。
+
+设计一个算法来计算你所能获取的最大利润。你最多可以完成 k 笔交易。
+
+注意：你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+
+输入：k = 2, prices = [2,4,1]
+输出：2
+解释：在第 1 天 (股票价格 = 2) 的时候买入，在第 2 天 (股票价格 = 4) 的时候卖出，这笔交易所能获得利润 = 4-2 = 2 。
+
+```python
+class Solution:
+    def maxProfit(self, k: int, prices: List[int]) -> int:
+        if len(prices) == 0:
+            return 0
+        dp = [[0] * (2*k+1) for _ in range(len(prices))]
+        for j in range(1, 2*k, 2):
+            dp[0][j] = -prices[0]
+        for i in range(1, len(prices)):
+            for j in range(0, 2*k-1, 2):
+                dp[i][j+1] = max(dp[i-1][j+1], dp[i-1][j] - prices[i])
+                dp[i][j+2] = max(dp[i-1][j+2], dp[i-1][j+1] + prices[i])
+        return dp[-1][2*k]
+```
+
+309:给定一个整数数组，其中第 i 个元素代表了第 i 天的股票价格 。
+
+设计一个算法计算出最大利润。在满足以下约束条件下，你可以尽可能地完成更多的交易（多次买卖一支股票）:
+
+你不能同时参与多笔交易（你必须在再次购买前出售掉之前的股票）。
+卖出股票后，你无法在第二天买入股票 (即冷冻期为 1 天)。
+
+输入: [1,2,3,0,2]
+输出: 3 
+解释: 对应的交易状态为: [买入, 卖出, 冷冻期, 买入, 卖出]
+
+```python
+class Solution:
+    def maxProfit(self, prices: List[int]) -> int:
+        n = len(prices)
+        if n == 0:
+            return 0
+        dp = [[0] * 4 for _ in range(n)]
+        dp[0][0] = -prices[0] #持股票
+        for i in range(1, n):
+            dp[i][0] = max(dp[i-1][0], max(dp[i-1][3], dp[i-1][1]) - prices[i])
+            dp[i][1] = max(dp[i-1][1], dp[i-1][3])
+            dp[i][2] = dp[i-1][0] + prices[i]
+            dp[i][3] = dp[i-1][2]
+        return max(dp[n-1][3], dp[n-1][1], dp[n-1][2])
+```
+
+
+
+#### 连续子数组最大和(53)
 
 给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
 
@@ -171,9 +395,144 @@ class Solution:
 
 
 
-##### 全排列(46、47、39、40、78、90)
+#### 组合、组合总和1、2、3（77、39、40、216）
 
-给一个不含重复数组，返回其所有可能的全排列
+组合
+
+给定两个整数 `n` 和 `k`，返回范围 `[1, n]` 中所有可能的 `k` 个数的组合。
+
+你可以按 **任何顺序** 返回答案。
+
+例：输入：n = 4, k = 2
+输出：
+[
+  [2,4],
+  [3,4],
+  [2,3],
+  [1,2],
+  [1,3],
+  [1,4],
+]
+
+```python
+class Solution:
+    def combine(self, n: int, k: int) -> List[List[int]]:
+        res = []
+        path = []
+        def backtrack(n, k, StartIndex):
+            if len(path) == k:
+                res.append(path[:])
+                return
+            for i in range(StartIndex, n-(k-len(path)) + 2):
+                path.append(i)
+                backtrack(n, k, i+1)
+                path.pop()
+        backtrack(n, k, 1)
+        return res
+```
+
+
+
+给定一个无重复元素的正整数数组 candidates 和一个正整数 target ，找出 candidates 中所有可以使数字和为目标数 target 的唯一组合。
+
+candidates 中的数字可以无限制重复被选取。如果至少一个所选数字数量不同，则两种组合是唯一的。 
+
+对于给定的输入，保证和为 target 的唯一组合数少于 150 个。
+
+例：输入: candidates = [2,3,6,7], target = 7
+输出: [[7],[2,2,3]]
+
+```python
+class Solution:
+    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:
+      	candidates.sort()
+        n = len(candidates)
+        res = []
+        def helper(i, tmp_sum, tmp):
+            if tmp_sum > target or i == n:
+                return 
+            if tmp_sum == target:
+                res.append(tmp)
+                return 
+            helper(i,  tmp_sum + candidates[i],tmp + [candidates[i]])
+            helper(i+1, tmp_sum ,tmp)
+        helper(0, 0, [])
+        return res
+```
+
+40: 
+
+给定一个数组 candidates 和一个目标数 target ，找出 candidates 中所有可以使数字和为 target 的组合。
+
+candidates 中的每个数字在每个组合中只能使用一次。
+
+注意：解集不能包含重复的组合。 
+
+例：输入: candidates = [2,5,2,1,2], target = 5,
+输出:
+[
+[1,2,2],
+[5]
+]
+
+```python
+class Solution:
+    def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:
+      	if not candidates:
+            return []
+        candidates.sort()
+        n = len(candidates)
+        res = []
+        
+        def backtrack(i, tmp_sum, tmp_list):
+            if tmp_sum == target:
+                res.append(tmp_list)
+                return 
+            for j in range(i, n):
+                if tmp_sum + candidates[j]  > target : break
+                if j > i and candidates[j] == candidates[j-1]:continue
+                backtrack(j + 1, tmp_sum + candidates[j], tmp_list + [candidates[j]])
+        backtrack(0, 0, [])    
+        return res
+```
+
+组合总和3
+
+找出所有相加之和为 n 的 k 个数的组合。组合中只允许含有 1 - 9 的正整数，并且每种组合中不存在重复的数字。
+
+说明：
+
+所有数字都是正整数。
+解集不能包含重复的组合。 
+
+输入: k = 3, n = 9
+输出: [[1,2,6], [1,3,5], [2,3,4]]
+
+```python
+class Solution:
+    def combinationSum3(self, k: int, n: int) -> List[List[int]]:
+        res = []  #存放结果集
+        path = []  #符合条件的结果
+        def findallPath(n,k,sum,startIndex):
+            if sum > n: return  #剪枝操作
+            if sum == n and len(path) == k:  #如果path.size() == k 但sum != n 直接返回
+                return res.append(path[:])
+            for i in range(startIndex,9-(k-len(path))+2):  #剪枝操作
+                path.append(i)
+                sum += i 
+                findallPath(n,k,sum,i+1)  #注意i+1调整startIndex
+                sum -= i  #回溯
+                path.pop()  #回溯
+        
+        findallPath(n,k,0,1)
+        return res
+```
+
+
+
+#### 全排列(46、47)
+
+46:给一个不含重复数组，返回其所有可能的全排列
 
 输入:[1,2,3]
 
@@ -192,6 +551,117 @@ class Solution:
        backtrack(nums,[])
        return res
 ```
+
+47:给定一个可包含重复数字的序列 `nums` ，**按任意顺序** 返回所有不重复的全排列。
+
+输入：nums = [1,1,2];
+
+输出：
+[[1,1,2],
+ [1,2,1],
+ [2,1,1]]
+
+```python
+class Solution:
+    def permuteUnique(self, nums: List[int]) -> List[List[int]]:
+      	# res用来存放结果
+        if not nums: return []
+        res = []
+        used = [0] * len(nums)
+        def backtracking(nums, used, path):
+            # 终止条件
+            if len(path) == len(nums):
+                res.append(path.copy())
+                return
+            for i in range(len(nums)):
+                if not used[i]:
+                    if i>0 and nums[i] == nums[i-1] and not used[i-1]:
+                        continue
+                    used[i] = 1
+                    path.append(nums[i])
+                    backtracking(nums, used, path)
+                    path.pop()
+                    used[i] = 0
+        # 记得给nums排序
+        backtracking(sorted(nums),used,[])
+        return res
+```
+
+
+
+#### 子集78、90
+
+给你一个整数数组 `nums` ，数组中的元素 **互不相同** 。返回该数组所有可能的子集（幂集）。
+
+解集 **不能** 包含重复的子集。你可以按 **任意顺序** 返回解集。
+
+输入：nums = [1,2,3]
+输出：[[],[1],[2],[1,2],[3],[1,3],[2,3],[1,2,3]]
+
+```python
+class Solution:
+    def subsets(self, nums: List[int]) -> List[List[int]]:
+      	res = []  
+        path = []  
+        def backtrack(nums,startIndex):
+            res.append(path[:])  #收集子集，要放在终止添加的上面，否则会漏掉自己
+            for i in range(startIndex,len(nums)):  #当startIndex已经大于数组的长度了，就终止了，for循环本来也结束了，所以不需要终止条件
+                path.append(nums[i])
+                backtrack(nums,i+1)  #递归
+                path.pop()  #回溯
+        backtrack(nums,0)
+        return res
+```
+
+90:给你一个整数数组 nums ，其中可能包含重复元素，请你返回该数组所有可能的子集（幂集）。
+
+解集 不能 包含重复的子集。返回的解集中，子集可以按 任意顺序 排列。
+
+输入：nums = [1,2,2]
+输出：[[],[1],[1,2],[1,2,2],[2],[2,2]]
+
+```python
+class Solution:
+    def subsetsWithDup(self, nums: List[int]) -> List[List[int]]:
+       	res = []  #存放符合条件结果的集合
+        path = []  #用来存放符合条件结果
+        def backtrack(nums,startIndex):
+            res.append(path[:])
+            for i in range(startIndex,len(nums)):
+                if i > startIndex and nums[i] == nums[i - 1]:  #我们要对同一树层使用过的元素进行跳过
+                    continue
+                path.append(nums[i])
+                backtrack(nums,i+1)  #递归
+                path.pop()  #回溯
+        nums = sorted(nums)  #去重需要排序
+        backtrack(nums,0)
+        return res
+```
+
+
+
+#### 移除元素(27)
+
+给出一个数组和一个值val，你需要原地移除所有数值等于val的元素，并返回移除后数组的长度
+
+例：输入：nums = [3,2,2,3] val= 3
+
+输出：2,nums = [2,2]
+
+快慢指针
+
+```python
+class Solution:
+  def removeElement(self, nums: List[int], val: int) -> int:
+    	i = 0
+      for j in range(len(nums)):
+        	if nums[j] != val:
+            	nums[i] = nums[j]
+              i += 1
+      return i
+```
+
+
 
 #### 下一个排列(31)
 
@@ -222,6 +692,26 @@ class Solution:
         l.reverse()
         nums[i+1:] = l 
 ```
+
+
+
+#### 旋转数组(189)
+
+给定一个数组，将数组中的元素向右移动k个位置，其中k是非负数
+
+输入：nums = [1,2,3,4,5,6,7], k = 3
+
+输出：[5,6,7,1,2,3,4]
+
+```python
+class Solution:
+  	def rotate(self, nums:List[int], k:int)-> None:
+      	nums[: ] = (nums[i] for i in range(-(k % len(nums)),len(nums)-k % len(nums)))
+```
+
+
+
+
 
 #### 最长连续递增子序列(300)
 
@@ -313,6 +803,25 @@ class Solution:
         return nums[-1]
 ```
 
+#### 缺失的第一个正数(41)
+
+给你一个未排序的整数数组nums，请你找出其中没有出现的最小的正整数
+
+例：输入：[1,2,0]
+
+输出:4
+
+```python
+class Solutioon:
+  	def firstMissingPositive(self,nums:List[int])-> int:
+      	nums = set(nums)
+        for j in range(1, 2 ** 31 - 1):
+          	if j not in nums:
+              	return j
+```
+
+
+
 #### 颜色分类(75)
 
 给定一个包含红色、白色和蓝色，一共 n 个元素的数组，原地对它们进行排序，使得相同颜色的元素相邻，并按照红色、白色、蓝色顺序排列。
@@ -351,6 +860,233 @@ class Solution:
                 ans = max(ans, (i - s[-2] - 1) * hs[s.pop()])
             s.append(i)
         return ans
+```
+
+
+
+#### 长度最小的子数组(209)
+
+给定一个含有n个正整数和一个正整数target
+
+找出该数组中满足其和大于target的长度最小的连续子数组，并返回其长度
+
+例：nums=[2,3,1,2,4,3], target=7 
+
+输出：2
+
+```python
+class Solution:
+  	def minSubArrayLen(self, target:int,nums: List[int])-> int:
+      	i, ans = 0, len(A) + 1
+        for j in range(len(A)):
+          	s -= A[j]
+            while s <= 0:
+              	ans = min(ans,j-i+1)
+                s += A[i]
+                i += 1
+        return ans % (len(A)+1)
+```
+
+#### 存在重复元素(217)
+
+给定一个整数数组，判断是否存在重复元素。
+
+如果存在一值在数组中出现至少两次，函数返回 `true` 。如果数组中每个元素都不相同，则返回 `false` 。
+
+例：输入：[1,2,3,1]
+
+输出：true
+
+输入：[1,2,3,4]
+
+输出：false
+
+```python
+class Solution:
+    def containsDuplicate(self, nums: List[int]) -> bool:
+      	return not (len(nums)==len(set(nums)))
+```
+
+
+
+#### 存在重复元素2(219)
+
+给定一个整数数组和一个整数 k，判断数组中是否存在两个不同的索引 i 和 j，使得 nums [i] = nums [j]，并且 i 和 j 的差的 绝对值 至多为 k。
+
+例：输入：nums = [1,2,3,1], k = 3
+
+输出：true
+
+输入：nums = [1,2,3,1,2,3], k = 2
+
+输出：false
+
+```python
+class Solution:
+    def containsNearbyDuplicate(self, nums: List[int], k: int) -> bool:
+      	nums_len = len(nums)
+        if nums_len <= 1:
+            return False
+        nums_dict = {}
+        for i in range(nums_len):
+            if nums[i] in nums_dict:
+                if i-nums_dict[nums[i]] <= k:
+                    return True
+            nums_dict[nums[i]] = i
+        return False
+```
+
+
+
+#### 存在重复元素3（220）
+
+给你一个整数数组 nums 和两个整数 k 和 t 。请你判断是否存在 两个不同下标 i 和 j，使得 abs(nums[i] - nums[j]) <= t ，同时又满足 abs(i - j) <= k 。
+
+如果存在则返回 true，不存在返回 false。
+
+例：输入：nums = [1,2,3,1], k = 3, t = 0
+
+输出：true
+
+输入：nums = [1,5,9,1,5,9], k = 2, t = 3
+
+输出：false
+
+```python
+class Solution:
+    def containsNearbyAlmostDuplicate(self, nums: List[int], k: int, t: int) -> bool:
+      	ls = [[nums[i], i] for i in range(len(nums))]
+        ls.sort(key=lambda x: x[0])
+        for i in range(len(nums)):
+            for j in range(i + 1, len(nums)):
+                if ls[j][0] - ls[i][0] > t:
+                    break
+                if abs(ls[j][1] - ls[i][1]) <= k:
+                    return True
+        return False
+```
+
+
+
+#### 寻找重复数字287
+
+给定一个包含 n + 1 个整数的数组 nums ，其数字都在 1 到 n 之间（包括 1 和 n），可知至少存在一个重复的整数。
+
+假设 nums 只有 一个重复的整数 ，找出 这个重复的数 。
+
+你设计的解决方案必须不修改数组 nums 且只用常量级 O(1) 的额外空间。
+
+例：输入：nums = [1,3,4,2,2]
+输出：2
+
+```python
+class Solution:
+    def findDuplicate(self, nums: List[int]) -> int:
+      	lo, hi = 1, len(nums)-1
+        while lo < hi:
+            mid = (lo + hi) // 2
+            if sum(i<=mid for i in nums) <= mid:
+                lo = mid + 1
+            else:
+                hi = mid
+        return lo
+```
+
+
+
+
+
+#### 数组中重复的数据(442)
+
+给定一个整数数组a，其中有些元素出现了两次而有些元素出现了一次，找出所有出现两次的元素
+
+输入：[4,3,2,7,8,2,3,1]
+
+输出：[2,3]
+
+```python
+class Solution:
+  	def findDuplicates(self, nums:List[int])-> List[int]:
+      	res = []
+        for x in nums:
+          	if nums[abs(x-1)] < 0:
+              	res.append(abs(x))
+            else:
+              	nums[abs(x)-1] *= -1
+        return res
+```
+
+
+
+#### 寻找峰值162
+
+峰值元素是指其值严格大于左右相邻值的元素。
+
+给你一个整数数组 nums，找到峰值元素并返回其索引。数组可能包含多个峰值，在这种情况下，返回 任何一个峰值 所在位置即可。
+
+你可以假设 nums[-1] = nums[n] = -∞ 。
+
+例：输入：nums = [1,2,1,3,5,6,4]
+输出：1 或 5 
+
+```python
+class Solution:
+    def findPeakElement(self, nums: List[int]) -> int:
+      	lo, hi = 0, len(nums)-1
+        while lo < hi:
+            mid = (lo+hi) // 2
+            mid2 = mid + 1
+            if nums[mid] < nums[mid2]:
+                lo = mid2
+            else:
+                hi = mid
+        return lo
+```
+
+
+
+#### 多数元素(169)
+
+波义尔摩尔投票算法
+
+```python
+def majorityElement(self, nums):
+  	count = 0
+    candidate = None
+    for num in nums:
+      	if count == 0:
+          	candidate = num
+        count += (1 if num == candidate else -1)
+    return candidate
+```
+
+
+
+#### 求众数(229)
+
+给定一个大小为n的整数组，找出其中所有出现超过n/3次的元素
+
+输入：[3,2,3]
+
+输出：[3]
+
+```python
+class Solution:
+  	def majorityElement(self, nums:List[int]) -> Lisr[int]:
+      	count1, count2, candidate1, candidate2 = 0,0,0,1
+        for n in nums:
+          	if n == candidate1:
+              	count1 += 1
+            elif n == candidate2:
+              	count2 += 1
+            elif count1 == 0:
+              	candidate1, count1 = n,1
+            elif count2 == 0:
+              	candidate2, count2 = n,1
+            else:
+              	count1, count2 = count1 - 1,count2 - 1
+        return [n for n in (candidate1,candidate2)
+                if nums.count(n) > len(nums) // 3]
 ```
 
 
@@ -489,9 +1225,25 @@ class Solution:
         return merge
 ```
 
+#### 删除有序数组的重复项(26)
+
+删除有序数组中重复的元素，在原数组上进行操作，
+
+```python
+def removeDuplicates(nums):
+  	if not nums:
+      	return 0
+    index = 1
+    for i in range(len(nums)-1):
+      	if nums[i] != nums[i+1]:
+          	nums[index] = nums[i+1]
+            index +=1
+    return index
+```
 
 
-#### 删除有序数组的重复项(80)
+
+#### 删除有序数组的重复项2(80)
 
 给你一个有序数组 nums ，请你 原地 删除重复出现的元素，使每个元素 最多出现两次 ，返回删除后数组的新长度。
 
@@ -545,6 +1297,79 @@ class Solution:
 
 
 
+#### 汇总区间(228)
+
+给定一个无重复元素的有序整数数组，返回恰好覆盖数组中所有数组的最小有序区间范围列表，
+
+例：nums = [0,1,2,4,5,7]
+
+输出：["0->2","4->5","7"]
+
+nums = [0,2,3,4,6,8,9]
+
+输出：["0","2->4","6","8->9"]
+
+```python
+class Solution:
+  	def summaryRange(self, nums: List[int]) -> List[str]:
+      	li = []
+        i = 0
+        while i < len(nums):
+          	j = i + 1;
+            while j < len(nums) and nums[j] == nums[i] + j - i:
+              	j += 1
+            li.append(str(nums[i]) if i == j-1 else str(nums[i]) + '->' + str(nums[j-1]))
+            i = j
+        return li
+```
+
+
+
+#### 寻找右区间436
+
+给你一个区间数组 intervals ，其中 intervals[i] = [starti, endi] ，且每个 starti 都 不同 。
+
+区间 i 的 右侧区间 可以记作区间 j ，并满足 startj >= endi ，且 startj 最小化 。
+
+返回一个由每个区间 i 的 右侧区间 的最小起始位置组成的数组。如果某个区间 i 不存在对应的 右侧区间 ，则下标 i 处的值设为 -1 。
+
+例：输入：intervals = [[1,2]]
+输出：[-1]
+解释：集合中只有一个区间，所以输出-1。
+
+输入：intervals = [[3,4],[2,3],[1,2]]
+输出：[-1, 0, 1]
+解释：对于 [3,4] ，没有满足条件的“右侧”区间。
+对于 [2,3] ，区间[3,4]具有最小的“右”起点，在原数组中索引为0;
+对于 [1,2] ，区间[2,3]具有最小的“右”起点，在原数组中索引为1。
+
+```python
+class Solution:
+    def findRightInterval(self, intervals: List[List[int]]) -> List[int]:
+      	n = len(intervals)
+        res = [-1] * n
+        dic = {}
+        for i, v in enumerate(intervals):
+            dic[v[0]] = i
+        start = sorted(dic.keys())
+        for i, v in enumerate(intervals):
+            l, r = 0, n - 1
+            while l <= r:
+                mid = (l + r) >> 1
+                if v[1] > start[mid]:
+                    l = mid + 1
+                else:
+                    r = mid - 1
+            if l < n:
+                res[i] = dic[start[l]]
+
+        return res
+```
+
+
+
+
+
 #### 和为s的连续正数序列(剑指offer57)
 
 输入一个正整数 target ，输出所有和为 target 的连续正整数序列（至少含有两个数）。
@@ -560,10 +1385,10 @@ class Solution:
 ```python
 class Solution:
     def findContinuousSequence(self, target: int) -> List[List[int]]:
-        n=target//2+1 
-        nums=list(range(1,n+1)) 
-        left,right=0,0 
-        sums,res=0,[]
+        n = target//2+1 
+        nums = list(range(1,n+1)) 
+        left,right = 0,0 
+        sums,res = 0,[]
         while right<len(nums):
             sums+=nums[right] 
             right+=1 
@@ -799,6 +1624,52 @@ class Solution:
 
 
 
+#### 顺时针生成数组(59)
+
+```python
+def generateMatrix(self,n: int) -> List[List[int]]:
+  	ans = [[0]*n for _ in range(n)]
+    op = itertools.cycle([(0,1),(1,0),(0,-1),(-1,0)])
+    d = next(op)
+    x,y = [0,0]
+    for k = range(1,n**2+1):
+      	ans[x][y] = k
+        i,j = x+d[0], y+d[1]
+        if not 0<= i < n or not 0<=j<n or ans[i][j]:
+          	d = next(op)
+            x,y = x+d[0], y+d[1]
+        else:
+          	x,y = i,j
+    
+    return ans
+```
+
+
+
+#### 有序矩阵中第 K 小的元素378
+
+给你一个 n x n 矩阵 matrix ，其中每行和每列元素均按升序排序，找到矩阵中第 k 小的元素。
+请注意，它是 排序后 的第 k 小元素，而不是第 k 个 不同 的元素。
+
+输入：matrix = [[1,5,9],[10,11,13],[12,13,15]], k = 8
+输出：13
+解释：矩阵中的元素为 [1,5,9,10,11,12,13,13,15]，第 8 小元素是 13
+
+```python
+class Solution:
+    def kthSmallest(self, matrix: List[List[int]], k: int) -> int:
+        lo, hi = matrix[0][0], matrix[-1][-1]
+        while lo < hi:
+            mid = (lo + hi) // 2
+            if sum(bisect.bisect(row, mid) for row in matrix) < k:
+                lo = mid + 1
+            else:
+                hi = mid
+        return lo
+```
+
+
+
 
 
 ### 旋转数组
@@ -825,9 +1696,41 @@ class Solution:
        return lo if lo == hi and target == nums[lo] else -1
 ```
 
-如果数组中有重复元素，编写一个函数来判断给定的目标值是否存在于数组中。若存在返回 true，否则返回 false。】
+81:如果数组中有重复元素，编写一个函数来判断给定的目标值是否存在于数组中。若存在返回 true，否则返回 false。
+
+```python
+class Solution:
+    def search(self, nums: List[int], target: int) -> bool:
+        lo, hi = 0, len(nums)-1
+        while lo <= hi:
+            mid = (lo+hi) >> 1
+            if nums[mid] == target:
+                return True
+            while lo<mid and nums[lo]==nums[mid]:
+                lo += 1
+            if nums[lo] <= nums[mid]: # 左侧有序
+                if nums[lo] <= target < nums[mid]:
+                    hi = mid - 1
+                else:
+                    lo = mid + 1
+            else:                     # 右侧有序，因为下落点在左侧
+                if nums[mid] < target <= nums[hi]:
+                    lo = mid + 1
+                else:
+                    hi = mid - 1
+        return False
+```
+
+
 
 #### 搜索旋转排序数组最小值153、154
+
+已知一个长度为 n 的数组，预先按照升序排列，经由 1 到 n 次 旋转 后，得到输入数组。例如，原数组 nums = [0,1,2,4,5,6,7] 在变化后可能得到：
+若旋转 4 次，则可以得到 [4,5,6,7,0,1,2]
+若旋转 7 次，则可以得到 [0,1,2,4,5,6,7]
+注意，数组 [a[0], a[1], a[2], ..., a[n-1]] 旋转一次 的结果为数组 [a[n-1], a[0], a[1], a[2], ..., a[n-2]] 。
+
+给你一个元素值 互不相同 的数组 nums ，它原来是一个升序排列的数组，并按上述情形进行了多次旋转。请你找出并返回数组中的 最小元素 。
 
 
 
@@ -847,6 +1750,21 @@ class Solution:
 ```
 
 如果数组中有重复元素，
+
+```python
+class Solution:
+    def findMin(self, nums: List[int]) -> int:
+      	lo, hi = 0, len(nums)-1
+        while lo < hi:
+            mid = (lo+hi) >> 1
+            if nums[mid] > nums[hi]:
+                lo = mid + 1
+            elif nums[mid] < nums[hi]:
+                hi = mid
+            else:
+                hi -= 1
+        return nums[lo]
+```
 
 
 
