--- a/docs/tech/进阶前端技术/前端工程化二.md
+++ b/docs/tech/进阶前端技术/前端工程化二.md
@@ -1,5 +1,5 @@
 ---
-title: 前端进阶（一）
+title: 前端进阶（二）-前端工程化
 date: 2020-12-15 21:40:33
 categories: IT
 tags: IT，Web,数据库
@@ -12,6 +12,74 @@ thumbnail: http://cdn.kunkunzhang.top/webpack.png
 ​       对于进阶，掌握基本原理和一些动画方面的库能够更美观的进行展现，实现更炫酷的动画效果。
 
 <!--more-->
+
+## js底层原理
+
+### js执行过程
+
+JavaScript是一种解释型语言，执行时按照解释器-编译器-执行的顺序进行。
+
+解释器：
+
+JavaScript的解释器包含在即时编译器(JIT，just in time)中，在一句一句编译源代码的同时又会将编译后的一些代码保存下来。
+
+即时编译器中首先有监视器监控着代码的运行状况。如果一段代码运行了几次，那么这段代码就会被标记为warm代码，标记为warm的代码会被编译器送到基线编译器编译，同时把结果缓存起来，如果一个函数被基线编译器编译，那么函数的每一行都会被编译成一个表，这个表的索引是行号和变量类型，如果监视器发现有代码使用相同的变量类型命中这段代码时，JIT会直接提取这段代码编译后的内容。
+
+如果标记为warm的代码还在不断被调用，那么它会被标记为hot，标记为hot的代码，意味着可能会被经常调用，所以可能需要更多时间优化编译结果。监视器会把该段代码送到优化编译器，编译成一个高效的版本并存储下来。
+
+编译：
+
+parse阶段-
+
+词法分析和语法分析：词法分析是把需要执行的代码字符串分割出来，生成一系列token，便于做语法分析
+
+语法分析分析上述输出，输出AST抽象语法树，如果分析发现异常则抛出错误。
+
+Ignition：Ignition是v8的解释器，它会根据抽象语法树生成对应的字节码并执行。
+
+所谓字节码，就是机器码的抽象，机器码虽然运行效率最高，但是占用空间较大，导致十分占内存，所以以时间换空间，引入字节码
+
+Turbofan：Turbofan能够把字节码翻译成机器码，当发现hot代码时，turbofan会把字节码翻译成机器码，然后调用生成的机器码。如果发现假设失效，则退回字节码
+
+Orinoco：Orinoco是v8的垃圾回收模块
+
+执行：
+
+执行阶段有执行上下文和执行栈两个概念
+
+执行上下文就是JavaScript的运行环境，通常有
+
+全局执行上下文，即window对象
+
+函数执行上下文，即函数执行的时候被创建，每次调用函数就会创建一个新的执行上下文
+
+eval执行上下文
+
+对于每个执行上下文创建时，都有三个比较重要的属性：
+
+变量对象：表示执行上下文的数据作用域，
+
+作用域链
+
+确定this指向：
+
+执行栈：
+
+js通过执行栈管理多个执行上下文，执行栈最底端是全局上下文，全局上下文中执行函数的时候，相应上下文会入栈，其中不断调用函数，不同的函数不断创建不同的执行上下文，直到函数执行完毕，上下文出栈，即后进先出
+
+如果有异步函数，在执行栈的空的时候查看任务队列，微任务优先入栈。
+
+### AST的应用
+
+Es-lint就是使用ast查询器查询AST，AST选择器类似CSS选择器，每个ESlint规则都是通过选择器操作的
+
+Babel:Babel对于一段代码的工作流程是：
+
+1.输入代码 2.词法分析，将代码分成token 3.语法分析：把token转换成AST
+
+4.遍历AST 5.改变AST，增删改查。 6.AST转换为源代码
+
+webpack：webpack主要通过遍历AST分析出模块的依赖、消除无用代码等
 
 ## Gulp
 
@@ -165,6 +233,171 @@ gulp.task('watch', function() {
 });
 ```
 
+### 其他插件
+
+打包前拷贝到dist目录，之后所有的操作基于dist目录
+
+```javascript 
+const { series, src, dest } = require('gulp');
+const clean = require('gulp-clean');
+//清除文件夹插件
+function clear() {
+	return src('dist',{ allowEmpty: true }).pipe(clean());
+}
+//拷贝静态资源
+function assets() {
+  return src('src/assets/**/*.*').pipe(dest('dist/assets/'));
+}
+//拷贝css文件
+function css() {
+  return src(['src/css/**/*.css']).pipe(dest('dist/css'));
+}
+//拷贝js文件
+function js() {
+  return src(['src/js/**/*.js']).pipe(dest('dist/js'))
+}
+//拷贝html文件
+function html() {
+  return src('src/views/**/*.html').pipe(dest('dist/views'))
+}
+
+exports.build = series(
+	clear,
+  assets,
+  css,
+  js,
+  html
+)
+```
+
+给打包文件加hash
+
+```shell
+npm i gulp-dev -D
+```
+
+在gulpfile。js中添加以下代码
+
+```javascript
+const rev = require('gulp-rev');
+//给css文件加入hash
+function cssRevHash() {
+  return src('dist/css/**/*.css')
+  	.pipe(rev())
+  	.pipe(dest('/dist/css'))
+  	.pipe(rev.manifest())
+  	.pipe(dev('rev/css'));
+}
+//给js文件加入hash
+function jsRevHash() {
+  return src('dist/js/**/*.js')
+  	.pipe(rev())
+  	.pipe(dest('dist/js/'))
+  	.pipe(rev.manifest())
+  	.pipe(dev('rev/js'));
+}
+
+export.build = series(
+		...
+  	cssRevHash,
+  	jsRevHash
+)
+```
+
+替换文件中的源文件
+
+```javascript
+npm i gulp-rev-collector -D
+```
+
+在gulpfilejs中加入代码
+
+```javascript
+const revCollector = require('gulp-rev-collector');
+
+function htmlRevInject() {
+  return src([`rev/${revDir}/**/*.json`,'dist/views/**/*.html'])
+  	.pipe(revCollector({ replaceReved: true}))
+  	.pipe(dest('dist/views'));
+}
+
+exports.build = series(
+	...
+  htmlRevInject
+)
+```
+
+打包zip文件
+
+```shell
+npm i gulp-zip -D
+```
+
+在gulpfilejs中加入代码
+
+```javascript
+const zip = require('gulp-zip')
+
+function zipiupiu() {
+  return src('dist/**/*').pipe(zip(zipName)).pipe(dest('dist'));
+}
+
+exports.build = series(
+	...
+  zipiupiu
+)
+```
+
+动态处理打包环境，有prod和dev两种
+
+```shell
+npm i cross-env -D
+```
+
+在packagejson中添加命令
+
+```json
+{
+  "scripts": {
+		"build:env": "cross-env NODE_ENV=development gulp build",
+    "build:prod": "cross-env NODE_ENV=production gulp build"
+  };
+}
+```
+
+根据不同环境执行不同的打包方式，如开发环境不需要压缩。
+
+```javascript
+if (process.env.NODE_ENV === 'production') {
+	exports.build = series (
+  	clear,
+    assets,
+    css,
+    js,
+    html,
+    cssRevHash,
+    jsRevHash,
+    htmlRevInject,
+    htmlMinify,
+    zipiupiu
+  )
+}else {
+  exports.build = series (
+  	clear,
+    assets,
+    css,
+    js,
+    html,
+    cssRevHash,
+    jsRevHash,
+    htmlRevInject,
+    zipiupiu
+  )
+}
+```
+
+
+
 ### gulp与webpack、grant的区别
 
 与webpack
@@ -213,6 +446,62 @@ https://www.cnblogs.com/2050/p/4198792.html
 - rollup-plugin-uglify: 压缩 bundle 文件
 - rollup-plugin-serve: 类比 webpack-dev-server, 提供静态服务器能力
 
+
+
+## Grunt
+
+
+
+安装cli工具
+
+```shell
+npm install -g grunt-cli
+```
+
+安装grunt及用到的插件
+
+```shell
+npm install gulp grunt-contrib-uglify --save-dev
+```
+
+创建`Gruntfile.js`文件
+
+```javascript
+module.exports = function(grunt) {
+    // Project configuration.
+    grunt.initConfig({
+        pkg: grunt.file.readJSON('package.json'),
+        uglify: {
+            options: {
+                banner: '/*! <%= pkg.name %> <%= grunt.template.today("yyyy-mm-dd") %> */\n'
+            },
+            build: {
+                src: 'src/*.js',
+                dest: 'build/all.min.js'
+            }
+        }
+    });
+    // 加载包含 "uglify" 任务的插件。
+    grunt.loadNpmTasks('grunt-contrib-uglify');
+    // 默认被执行的任务列表。
+    grunt.registerTask('default', ['uglify']);
+};
+```
+
+大部分的Gruntfile.js都非常臃肿，有一大段一大段的嵌套配置结构，令人看起来很烦躁。这些冗余的`Gruntfile.js`文件其实维护起来并不是那么轻量的，主要体现在下面几个方面，
+
+1. 配置和运行分离
+2. 大部分插件的职责不单一，做了不仅一件事
+3. 配置项过多，做的事情越多，配置增长的就越快，且越不可控制
+4. 任务执行中会产生一些临时文件，较频繁的IO操作导致性能滞后
+
+我们再来看看gulp中是如何解决这些问题的，
+
+1. gulp遵循**code over configuration**的原则，直接就在调用的地方配置
+2. gulp的插件严格遵循单一职责原则，一个插件仅作一件事，一个gulp一般只有20多行代码就搞定
+3. gulp基于流的思想，并没有过多的配置，任务更多的像是在写代码而不是定义配置
+4. 这个是grunt的致命伤，gulp的流式构建改变了底层的流程控制，不再频繁的去进行IO操作了
+
 ## Parcel
 
 
@@ -258,8 +547,6 @@ commonjs模块、es6模块
 
 
 ### snowpack
-
-
 
 
 
